--- a/requirements.txt
+++ b/requirements.txt
@@ -137,3 +137,7 @@ widgetsnbextension @ file:///C:/ci/widgetsnbextension_1645009839917/work
 win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
 wincertstore==0.2
 wrapt==1.14.1
+
+numpy~=1.23.3
+scikit-learn~=1.1.3
+librosa~=0.9.2
