--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,160 @@
-absl-py==1.3.0
-anyio @ file:///C:/ci/anyio_1644481856696/work/dist
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644569876605/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-astunparse==1.6.3
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650293028159/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
-brotlipy==0.7.0
-cachetools==5.2.0
-certifi==2022.9.24
-cffi @ file:///C:/Windows/Temp/abs_6808y9x40v/croots/recipe/cffi_1659598653989/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-colorama @ file:///C:/Windows/TEMP/abs_9439aeb1-0254-449a-96f7-33ab5eb17fc8apleb4yn/croots/recipe/colorama_1657009099097/work
-cryptography @ file:///C:/b/abs_36x9ifdcl4/croot/cryptography_1665612655344/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///C:/ci_310/debugpy_1642079916595/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints @ file:///C:/ci/entrypoints_1649926676279/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_ebruxzvd08/croots/recipe/python-fastjsonschema_1661376484940/work
-flatbuffers==22.10.26
-fonttools==4.25.0
-gast==0.4.0
-google-auth==2.14.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.50.0
-h5py==3.7.0
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-ipykernel @ file:///C:/b/abs_21ykzkm7y_/croots/recipe/ipykernel_1662361803478/work
-ipython @ file:///C:/b/abs_84shimxwmz/croot/ipython_1668088123494/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
-jedi @ file:///C:/ci/jedi_1644315428305/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-joblib @ file:///C:/b/abs_e60_bwl1v6/croot/joblib_1666298845728/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///C:/b/abs_59eyhnbyej/croots/recipe/jsonschema_1663375476535/work
-jupyter @ file:///C:/Windows/TEMP/abs_56xfdi__li/croots/recipe/jupyter_1659349053177/work
-jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
-jupyter-server @ file:///C:/Windows/TEMP/abs_d3c42c59-765d-4f9b-9fa3-ad5b1369485611i_yual/croots/recipe/jupyter_server_1658754493238/work
-jupyter_client @ file:///C:/b/abs_8fbm7986b_/croots/recipe/jupyter_client_1662504374117/work
-jupyter_core @ file:///C:/b/abs_b8r5lb5eus/croot/jupyter_core_1668084445779/work
-jupyterlab @ file:///C:/ci/jupyterlab_1658909375359/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-jupyterlab_server @ file:///C:/ci/jupyterlab_server_1664893162602/work
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver @ file:///C:/ci/kiwisolver_1653292359073/work
-libclang==14.0.6
-Markdown==3.4.1
-MarkupSafe @ file:///C:/ci/markupsafe_1654508036328/work
-matplotlib @ file:///C:/b/abs_ae02atcfur/croot/matplotlib-suite_1667356722968/work
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934094726/work
-mistune @ file:///C:/ci_310/mistune_1642084168466/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
-mkl-service==2.4.0
-munkres==1.1.4
-nbclassic @ file:///opt/conda/conda-bld/nbclassic_1644943264176/work
-nbclient @ file:///C:/ci/nbclient_1650308592199/work
-nbconvert @ file:///C:/ci/nbconvert_1649759175220/work
-nbformat @ file:///C:/b/abs_1dw90o2uqb/croots/recipe/nbformat_1663744957967/work
-nest-asyncio @ file:///C:/ci/nest-asyncio_1649848132512/work
-notebook @ file:///C:/Windows/TEMP/abs_79abr1_60s/croots/recipe/notebook_1659083661851/work
-numexpr @ file:///C:/Windows/Temp/abs_e2036a32-9fe9-47f3-a04c-dbb1c232ba4b334exiur/croots/recipe/numexpr_1656940304835/work
-numpy @ file:///C:/b/abs_53f_dbvhzc/croot/numpy_and_numpy_base_1665773185489/work
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/b/abs_cdcgk91igc/croots/recipe/pandas_1663772960432/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.2.0
-ply==3.11
-prometheus-client @ file:///C:/Windows/TEMP/abs_ab9nx8qb08/croots/recipe/prometheus_client_1659455104602/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-protobuf==3.19.6
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
-PyQt5==5.15.7
-PyQt5-sip @ file:///C:/Windows/Temp/abs_d7gmd2jg8i/croots/recipe/pyqt-split_1659273064801/work/pyqt_sip
-pyrsistent @ file:///C:/ci_310/pyrsistent_1642117077485/work
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/Windows/TEMP/abs_90eacd4e-8eff-491e-b26e-f707eba2cbe1ujvbhqz1/croots/recipe/pytz_1654762631027/work
-pywin32==302
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp310-none-win_amd64.whl
-pyzmq @ file:///C:/ci/pyzmq_1657616000714/work
-qtconsole @ file:///C:/ci/qtconsole_1662019052262/work
-QtPy @ file:///C:/ci/qtpy_1662015130233/work
-requests @ file:///C:/ci/requests_1657735340829/work
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn @ file:///C:/b/abs_eezai1guz5/croot/scikit-learn_1667587552067/work
-scipy==1.9.3
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-sip @ file:///C:/Windows/Temp/abs_b8fxd17m2u/croots/recipe/sip_1659012372737/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio @ file:///C:/ci_310/sniffio_1642092172680/work
-soupsieve @ file:///C:/b/abs_fasraqxhlv/croot/soupsieve_1666296394662/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.1.0
-terminado @ file:///C:/ci/terminado_1644312135040/work
-testpath @ file:///C:/Windows/TEMP/abs_23c7fa33-cbb9-46dc-b7c5-590c38e2de3d4bmbngal/croots/recipe/testpath_1655908553202/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///C:/ci/tornado_1662476985533/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-typing_extensions @ file:///C:/Windows/TEMP/abs_dd2d0moa85/croots/recipe/typing_extensions_1659638831135/work
-urllib3 @ file:///C:/b/abs_a8_3vfznn_/croot/urllib3_1666298943664/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///C:/ci_310/websocket-client_1642093970919/work
-Werkzeug==2.2.2
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1645009839917/work
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
-wincertstore==0.2
-wrapt==1.14.1
-
-numpy~=1.23.3
-scikit-learn~=1.1.3
-librosa~=0.9.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+absl-py=1.3.0=py310h06a4308_0
+appdirs=1.4.4=pyh9f0ad1d_0
+astunparse=1.6.3=py_0
+audioread=3.0.0=py310hff52083_1
+blas=1.0=mkl
+brotli=1.0.9=h5eee18b_7
+brotli-bin=1.0.9=h5eee18b_7
+brotlipy=0.7.0=py310h7f8727e_1002
+bzip2=1.0.8=h7b6447c_0
+ca-certificates=2023.01.10=h06a4308_0
+certifi=2022.12.7=py310h06a4308_0
+cffi=1.15.1=py310h5eee18b_3
+charset-normalizer=2.1.1=pyhd8ed1ab_0
+contourpy=1.0.5=py310hdb19cb5_0
+cryptography=3.4.8=py310h685ca39_1
+cycler=0.11.0=pyhd3eb1b0_0
+daal4py=2021.4.0=py310h00b725a_0
+dal=2021.4.0=h06a4308_729
+dbus=1.13.18=hb2f20db_0
+decorator=5.1.1=pyhd8ed1ab_0
+expat=2.4.9=h6a678d5_0
+ffmpeg=4.2.2=h20bf706_0
+fftw=3.3.9=h27cfd23_1
+fontconfig=2.14.1=h52c9d5c_1
+fonttools=4.25.0=pyhd3eb1b0_0
+freetype=2.12.1=h4a9f257_0
+gast=0.4.0=pyhd3eb1b0_0
+gettext=0.21.0=hf68c758_0
+giflib=5.2.1=h5eee18b_1
+glib=2.69.1=he621ea3_2
+gmp=6.2.1=h58526e2_0
+gnutls=3.6.13=h85f3911_1
+google-pasta=0.2.0=pyhd3eb1b0_0
+gst-plugins-base=1.14.0=h8213a91_2
+gstreamer=1.14.0=h28cd5cc_2
+h5py=3.7.0=py310he06866b_0
+hdf5=1.10.6=h3ffc7dd_1
+icu=58.2=he6710b0_3
+idna=3.4=pyhd8ed1ab_0
+intel-openmp=2021.4.0=h06a4308_3561
+joblib=1.1.1=py310h06a4308_0
+jpeg=9e=h7f8727e_0
+keras=2.10.0=py310h06a4308_0
+keras-preprocessing=1.1.2=pyhd3eb1b0_0
+kiwisolver=1.4.4=py310h6a678d5_0
+krb5=1.19.4=h568e23c_0
+lame=3.100=h7f98852_1001
+lcms2=2.12=h3be6417_0
+ld_impl_linux-64=2.38=h1181459_1
+lerc=3.0=h295c915_0
+libbrotlicommon=1.0.9=h5eee18b_7
+libbrotlidec=1.0.9=h5eee18b_7
+libbrotlienc=1.0.9=h5eee18b_7
+libclang=14.0.6=default_hc1a23ef_0
+libclang13=14.0.6=default_h31cde19_0
+libdeflate=1.8=h7f8727e_5
+libedit=3.1.20221030=h5eee18b_0
+libevent=2.1.12=h8f2d780_0
+libffi=3.4.2=h6a678d5_6
+libflac=1.3.4=h27087fc_0
+libgcc-ng=11.2.0=h1234567_1
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libllvm10=10.0.1=hbcb73fb_5
+libllvm11=11.1.0=hf817b99_2
+libllvm14=14.0.6=h9e868ea_1
+libogg=1.3.4=h7f98852_1
+libopus=1.3.1=h7f98852_1
+libpng=1.6.37=hbc83047_0
+libpq=12.9=h16c4e8d_3
+libprotobuf=3.19.6=he621ea3_0
+librosa=0.9.2=pyhd8ed1ab_0
+libsndfile=1.0.31=h9c3ff4c_1
+libstdcxx-ng=11.2.0=h1234567_1
+libtiff=4.5.0=hecacb30_0
+libuuid=1.41.5=h5eee18b_0
+libvorbis=1.3.7=h9c3ff4c_0
+libvpx=1.7.0=h439df22_0
+libwebp=1.2.4=h11a3e52_0
+libwebp-base=1.2.4=h5eee18b_0
+libxcb=1.15=h7f8727e_0
+libxkbcommon=1.0.1=hfa300c1_0
+libxml2=2.9.14=h74e7548_0
+libxslt=1.1.35=h4e12654_0
+llvmlite=0.39.1=py310he621ea3_0
+lz4-c=1.9.4=h6a678d5_0
+markdown=3.4.1=py310h06a4308_0
+markupsafe=2.1.1=py310h7f8727e_0
+matplotlib=3.6.2=py310h06a4308_0
+matplotlib-base=3.6.2=py310h945d387_0
+mkl=2021.4.0=h06a4308_640
+mkl-service=2.4.0=py310h7f8727e_0
+mkl_fft=1.3.1=py310hd6ae3a3_0
+mkl_random=1.2.2=py310h00e6091_0
+mpi=1.0=mpich
+mpich=3.3.2=external_0
+munkres=1.1.4=py_0
+ncurses=6.4=h6a678d5_0
+nettle=3.6=he412f7d_0
+nspr=4.33=h295c915_0
+nss=3.74=h0370c37_0
+numba=0.56.4=py310h1128e8f_0
+numpy=1.23.5=py310hd5efca6_0
+numpy-base=1.23.5=py310h8e6c178_0
+openh264=2.1.1=h4ff587b_0
+openssl=1.1.1t=h7f8727e_0
+packaging=22.0=py310h06a4308_0
+pcre=8.45=h295c915_0
+pillow=9.2.0=py310hace64e9_1
+pip=22.3.1=py310h06a4308_0
+ply=3.11=py310h06a4308_0
+pooch=1.6.0=pyhd8ed1ab_0
+protobuf=3.19.6=py310h6a678d5_0
+pyasn1=0.4.8=pyhd3eb1b0_0
+pyasn1-modules=0.2.8=py_0
+pycparser=2.21=pyhd3eb1b0_0
+pyopenssl=20.0.1=pyhd8ed1ab_0
+pyparsing=3.0.9=py310h06a4308_0
+pyqt=5.9.2=py310h295c915_6
+pyqt5-sip=12.11.0=pypi_0
+pysocks=1.7.1=pyha2e5f31_6
+pysoundfile=0.11.0=pyhd8ed1ab_0
+python=3.10.9=h7a1cb2a_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python_abi=3.10=2_cp310
+qt=5.9.7=h5867ecd_1
+readline=8.2=h5eee18b_0
+requests=2.28.2=pyhd8ed1ab_0
+resampy=0.4.2=pyhd8ed1ab_0
+scikit-learn=1.1.3=py310h6a678d5_0
+scikit-learn-intelex=2021.4.0=py310h06a4308_0
+scipy=1.9.3=py310hd5efca6_0
+setuptools=65.6.3=py310h06a4308_0
+sip=4.19.13=py310h295c915_0
+six=1.16.0=pyhd3eb1b0_1
+sqlite=3.40.1=h5082296_0
+tbb=2021.6.0=hdb19cb5_1
+tensorboard-plugin-wit=1.8.1=py310h06a4308_0
+tensorflow-estimator=2.10.0=py310h06a4308_0
+termcolor=2.1.0=py310h06a4308_0
+threadpoolctl=2.2.0=pyh0d69192_0
+tk=8.6.12=h1ccaba5_0
+toml=0.10.2=pyhd3eb1b0_0
+tornado=6.2=py310h5eee18b_0
+tzdata=2022g=h04d1e81_0
+urllib3=1.26.14=pyhd8ed1ab_0
+webencodings=0.5.1=py310h06a4308_1
+werkzeug=2.2.2=py310h06a4308_0
+wheel=0.37.1=pyhd3eb1b0_0
+wrapt=1.14.1=py310h5eee18b_0
+x264=1!157.20191217=h7b6447c_0
+xz=5.2.10=h5eee18b_1
+zlib=1.2.13=h5eee18b_0
+zstd=1.5.2=ha4553b6_0
